[FriendSettings] Fix spacing, add styling

--- a/src/blocks/Settings/partials/FriendSettings/FriendSettings.module.css
+++ b/src/blocks/Settings/partials/FriendSettings/FriendSettings.module.css
@@ -18,6 +18,7 @@
 
 .header {
   font-size: 35px;
+  font-weight: 300;
 }
 
 .closeOptions {
